import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

apply plugin: 'java'
apply plugin: 'maven-publish'

archivesBaseName = 'PinkBull'
version = '1.5-SNAPSHOT'

repositories {
	mavenLocal()

	maven {
		name = 'Spigot'
		url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
		
		content {
			includeGroup 'org.bukkit'
			includeGroup 'org.spigotmc'
	      }
	}

	maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
	maven { url = 'https://oss.sonatype.org/content/repositories/central' }
	maven { url 'https://nexus.scarsz.me/content/groups/public/' }

	maven {
		name 'm2-dv8tion'
		url 'https://m2.dv8tion.net/releases'
	}
	
	mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(16))
    }
}

dependencies {

	compileOnly "org.spigotmc:spigot-api:${project.spigot_version}"
	
	implementation "org.bstats:bstats-bukkit:${project.bstats_version}"
	shadow "org.bstats:bstats-bukkit:${project.bstats_version}"
	
	implementation(project(path: ':spiget', configuration: 'shadow')) {
		exclude group:'dev.derklaro.spiget'
	}
	
	shadow(project(':spiget')) 
	
	compileOnly "com.google.code.findbugs:annotations:${project.findbugs_version}"
	annotationProcessor "com.google.code.findbugs:annotations:${project.findbugs_version}"

	compileOnly "com.discordsrv:discordsrv:${project.discordsrv_version}"
	
	testImplementation "org.spigotmc:spigot-api:${project.spigot_version}"
	testImplementation "junit:junit:${project.junit_version}"
}

task submodulesUpdate(type:Exec) {
  description 'Updates (and inits) git submodules'
  commandLine 'git', 'submodule', 'update', '--init', '--recursive', '--remote'
  group 'Build Setup'
}

processResources {
    from(sourceSets.main.resources.srcDirs) {
	duplicatesStrategy = 'include'
        filter ReplaceTokens, tokens: [version: version]
    }
}

shadowJar {

	archiveClassifier.set('')
    
    relocate 'org.bstats', 'de.rangun.pinkbull.shadowed.org.bstats'
    relocate 'de.rangun.spiget', 'de.rangun.pinkbull.shadowed.de.rangun.spiget'

    exclude 'META-INF/**'
    
    minimize()
}


compileJava {
	dependsOn submodulesUpdate
}

assemble {
	dependsOn shadowJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = 'de.rangun'
            artifactId = archivesBaseName
            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}

test {
    testLogging {
      events "failed"

      showExceptions true
      exceptionFormat "full"
      showCauses true
      showStackTraces true

      showStandardStreams = false
    }
}
